# STM32-Template

./: BlinkingLight.elf  CMakeLists.txt  Makefile.common  README.md  stm32f100.ld
Demo/: CMakeLists.txt  Makefile  main.c  prova
